Fix spacing and font size overmeasure
It was too late when I found out that the whole time before this point,
the live display of the page was zoomed in, and so things broke when I
zoomed out to default. But I'm keeping the font size larger than in the
provided picture demo in the project instructions as this way is more
accessible and readable for people that look at large screens with faces
a meter away from the screen.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     text-align: center;
     position: absolute;
     bottom: 3px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     background-color: rgba(0 0 0 / 0.3);
 }
 
@@ -71,7 +71,7 @@ body {
 
 .right-side > p {
     padding-right: 20%;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: bold;
     font-family: Geneva, Tahoma, sans-serif;
     margin-bottom: 2rem;
@@ -82,7 +82,7 @@ form {
     background-color: white;
     box-shadow: 0 4px 7px rgba(0 0 0 / 0.2);
     padding: 1rem 20% 1.5rem 0;
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 
 form > h1 {
@@ -104,7 +104,7 @@ form > h1 {
 
 .form-field > input {
     padding: .7ex 1ch;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 5px;
     border-color: rgba(0 0 0 / 0.2);
@@ -125,7 +125,7 @@ button {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     border-radius: 10px;
     cursor: pointer;
     box-shadow: 0 4px 10px rgba(0 0 0 / 0.2);
@@ -133,7 +133,7 @@ button {
 
 .form-cont > p {
     margin-top: 2.3rem;
-    font-size: 1.3rem;
+    font-size: 1.15rem;
     font-family: Arial, Helvetica, sans-serif;
 }
 
